--- a/frontend/scss/special.scss
+++ b/frontend/scss/special.scss
@@ -39,7 +39,7 @@ header {
     & a {
       display: block;
 
-      min-width: 8rem;
+      min-width: 7rem;
 
       font-family: monospace;
     }
